@@ -2,6 +2,7 @@
 FROM registry.access.redhat.com/ubi9/openjdk-21:1.20-2 AS build
 
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
+
 WORKDIR /build
 COPY . /build
 
@@ -13,7 +14,7 @@ RUN ./gradlew :ndc-connector-phoenix:build --no-daemon --console=plain -x test
 FROM registry.access.redhat.com/ubi9/openjdk-21:1.20-2
 
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
-ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
+ENV JAVA_OPTS_APPEND="-Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED"
 ENV JAVA_APP_JAR="/app/quarkus-run.jar"
 
 WORKDIR /app
